2001-06-17  Dave Peticolas  <dave@krondo.com>

	* src/FileDialog.c (gncFileSave): save the window state on a save
	(gncFileQuerySave): don't provide cancel option when the ui can't

	* src/scm/main-window.scm (gnc:main-window-save-state): new func
	don't save state when the ui can't

	* src/gnome/window-main.c
	(gnc_main_window_can_cancel_exit): new func
	(gnc_main_window_can_save): new func
	(gnc_main_window_has_apps): new func

	* src/gnc-ui.h: add new api

	* src/gnome/top-level.c (gnc_ui_can_cancel_exit): new func

2001-06-16  Dave Peticolas  <dave@krondo.com>

	* src/guile/gnc.gwp: update for api change

	* src/scm/main.scm: update for api change

	* src/gnome/glade/newuser.glade: new file for new user glade xml

	* src/gnome/glade-support.[ch]: remove generated files

	* src/gnome/new-user-*.[ch]: remove old files

	* src/gnome/dialog-new-user.c: new file for new user dialog code.

	* src/gnome/druid-hierarchy.c: new file for account hierarchy
	creation druid code. Rename api calls to reflect the more
	general use of the druid.

2001-06-16  Robert Graham Merkel <rgmerk@mira.net

	* po/POTFILES.in : remove references to deleted files.

2001-06-15  James LewisMoss  <jimdres@mindspring.com>

	* src/engine/gnc-book.c (gnc_book_write_to_file): remove useless
	line. 
	(make_backup): new func for duplicate functionality
	(copy_file): new func to copy file.
	(gnc_book_backup_file): use make_backup
	(gnc_book_write_to_file): use make_backup

2001-06-15  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-account-picker.c: use libglade

	* src/gnome/dialog-print-check.c: use libglade

	* src/gnome/dialog-find-transactions.c: use libglade

	* src/guile/gnc.gwp: remove budgeting api

	* src/gnome/dialog-budget.[ch]: remove

	* src/gnome/dialog-fincalc.c: use libglade

	* src/gnome/dialog-commodity.c: use libglade

	* src/gnome/dialog-account.c: use libglade

	* src/gnome/dialog-userpass.c: fix bloop

	* src/gnome/druid-commodity.c: use libglade
